[package]
name = "simple-torrent"
version = "0.1.0"
authors = ["Shridhar Sundarraj <shridharsundarraj3@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
sha-1 = "0.8.2"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
bytes = "0.5.4"
thiserror = "1.0.15"
anyhow = "1.0"
rand = "0.7.3"
bitvec = "0.17.4"
lazy_static = "1.4.0"
assert_matches = "1.3.0"
structopt = "0.3.14"
mockito = "0.25.1"
url = "2.1.1"
log = "0.4.0"
tempfile = "3.1.0"
pretty_env_logger = "0.3"
reqwest = { version = "0.10.4", features = ["blocking"] }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
